# Hari

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test.yaml
result/Qwen/Qwen2.5-7B-Instruct/: result.jsonl
result/google/gemma-3-4b-it/: result.jsonl
result/gpt-4o-2024-11-20/: result.jsonl
src/hari/: __init__.py  evaluate.py  gpt4o.py  judger.py  model.py  plot.py  prepare_dataset.py
src/hari/model/: gpt4o.py  model.py  vLLM.py
