[project]
name = "hari"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "speed1313", email = "speedtry13@icloud.com" }
]
requires-python = ">=3.12.1"
dependencies = [
    "datasets>=3.5.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "openai>=1.72.0",
    "python-dotenv>=1.1.0",
    "seaborn>=0.13.2",
    "vllm>=0.8.3",
    "weave>=0.51.42",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
